--- a/web/css/style.css
+++ b/web/css/style.css
@@ -35,9 +35,22 @@ body {
     background-color: transparent;
     padding-left: 15px;
 }
+.icon {
+    cursor: pointer;
+}
 .icon--search {
     position: absolute;
     left: 15px;
+}
+.icon--copy-clipboard {
+    position: absolute;
+    top: -10px;
+    right: 15px;
+    opacity: 0.1;
+}
+.example:hover .icon--copy-clipboard {
+    color: #f15a22!important;
+    opacity: 1;
 }
 .input--search {
     padding-left: 30px;
@@ -63,15 +76,24 @@ body {
     font-size: 15px;
     display: block;
 }
+.menu-list-item--has-sub-items .menu-list {
+    /*display: none;*/
+}
 .sidebar-menu a:hover {
     color: #f15a22;
     text-decoration: none;
+}
+.sidebar-menu a.active {
+    color: #f15a22;
 }
 .page-wrapper {
     margin-left: 16.666667%;
 }
 .text-orange {
     color: #f15a22!important;
+}
+.text-ocean-blue {
+    color: #2a9dc7;
 }
 h2 {
     font-size: 34px;
@@ -94,16 +116,17 @@ h6 {
 .table-responsive {
     box-shadow: 0 2px 2px 0 rgba(0,0,0,.14), 0 1px 5px 0 rgba(0,0,0,.12), 0 3px 1px -2px rgba(0,0,0,.2);
 }
-table {
+.table {
     max-width: 100%;
     border-radius: .2rem;
 }
-table th {
+.table th {
     background-color: rgba(0,0,0,.54);
     color: #fff;
     vertical-align: top;
+    padding: .5rem;
 }
-table:not([class]) td {
+.table:not([class]) td {
     border-top: .1rem solid rgba(0,0,0,.07);
     vertical-align: top;
 }
@@ -158,13 +181,20 @@ code {
 .badge--options {
     background-color: #616161!important;
 }
-.badge--copy, .badge--publish {
+.badge--copy, .badge--publish, .badge--swap {
     background-color: #26a69a!important;
 }
 .background--gray {
     background-color: #fcfcfc;
-    /*color: #ffffff;*/
 }
 .section {
     padding-top: 3rem;
+}
+.examples {
+    background-color: #f3f3f3;
+}
+
+.examples code {
+    background-color: transparent;
+    box-shadow: none;
 }
