--- a/raml2html/themes/default/resource.html.twig
+++ b/raml2html/themes/default/resource.html.twig
@@ -9,7 +9,7 @@
                     <h6 class="heading text-gray">Header parameters</h6>
                     {% for item in method.headers %}
                         <div class="mb-2">
-                            <p><strong>{{ item.key }}</strong></p>
+                            <p class="mt-3 mb-0"><strong>{{ item.key }}</strong></p>
                             <p>{{ item.description }}</p>
                             <div class="table-responsive mb-2">
                                 <table class="table">
