--- a/raml2html/themes/default/resource-request-content.html.twig
+++ b/raml2html/themes/default/resource-request-content.html.twig
@@ -1,6 +1,6 @@
 <div id="{{ resource_unique_id }}_{{ method.type }}_request">
     {% if method.bodies %}
-        <h6 class="pt-3">Request</h6>
+        <h5 class="heading text-gray pt-3">Request</h5>
         {% for key, body in method.bodies %}
             <p><strong>Body</strong></p>
             <table class="table highlight striped">
@@ -27,21 +27,24 @@
                         </td>
                     </tr>
                 {% endif %}
-
-                {% if body.examples %}
-                    <tr>
-                        <th>Example</th>
-                        <td>
-                            {% for example in body.examples %}
-                                <div class="example">
-                                    <pre><code>{{ example }}</code></pre>
-                                </div>
-                            {% endfor %}
-                        </td>
-                    </tr>
-                {% endif %}
                 </tbody>
             </table>
+            {% if body.examples %}
+                {% for example in body.examples %}
+                    <div class="example">
+                        {% set mediaTypeFormat = body.mediaType|split('.')|last %}
+                        {% set mediaType = mediaTypeFormat ?? '' %}
+                        <div class="example position-relative border p-3 mb-3">
+                            <p class="mb-0"><strong>{{ mediaType }}</strong></p>
+                            <p class="mb-0 icon icon--copy-clipboard"><i class="material-icons-outlined">
+                                    file_copy
+                                </i>
+                            </p>
+                            <pre class="border-top"><code class="{{ mediaType }}">{{ example }}</code></pre>
+                        </div>
+                    </div>
+                {% endfor %}
+            {% endif %}
         {% endfor %}
     {% endif %}
 </div>
