--- a/web/css/style.css
+++ b/web/css/style.css
@@ -44,7 +44,7 @@ body {
 }
 .icon--copy-clipboard {
     position: absolute;
-    top: -10px;
+    top: 10px;
     right: 15px;
     opacity: 0.1;
 }
@@ -190,8 +190,8 @@ code {
 .section {
     padding-top: 3rem;
 }
-.examples {
-    background-color: #f3f3f3;
+.example {
+    border-radius: 10px;
 }
 
 .examples code {
