Changes after review

--- a/raml2html/themes/default/index.html.twig
+++ b/raml2html/themes/default/index.html.twig
@@ -7,7 +7,7 @@
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons|Material+Icons+Outlined" rel="stylesheet">
     <link href="web/css/bootstrap.min.css" rel="stylesheet">
     <link href="web/fonts/MavenPro.css" rel="stylesheet">
-    <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.18.1/styles/default.min.css">
+    <link href="web/css/github-gist.css" rel="stylesheet">
     <link href="web/css/style.css" rel="stylesheet">
     <title>{{ api.title }}</title>
 </head>
