Changes after review part 2

--- a/raml2html/themes/default/index.html.twig
+++ b/raml2html/themes/default/index.html.twig
@@ -12,7 +12,7 @@
     <title>{{ api.title }}</title>
 </head>
 <body>
-<header class="header background--gray">
+<header class="header fixed-top background--gray">
     <div class="container-fluid">
         <div class="row">
             <div class="col-12 d-inline-flex">
