--- a/raml2html/themes/default/type.html.twig
+++ b/raml2html/themes/default/type.html.twig
@@ -1,4 +1,4 @@
-<strong>{{ type.name }}</strong>
+<span class="font-weight-medium">{{ type.name }}</span>
 
 {% if type.getRequired() %}
     <span class="red-text">*</span>
