--- a/web/css/style.css
+++ b/web/css/style.css
@@ -1,12 +1,28 @@
 body {
     font-family: "Maven Pro";
 }
+/* width */
+::-webkit-scrollbar {
+    width: 5px;
+    height: 5px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+    background: #dee2e6;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+    background: #c0c0c0;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+    background: #f15a22;
+}
+
 .header {
-    position: fixed;
-    top: 0;
-    left: 0;
-    right: 0;
-    z-index: 10000;
     height: 3rem;
 }
 .nav-brand {
@@ -110,8 +126,14 @@ h5 {
 h6 {
     font-size: 18px;
 }
+.text-black {
+    color: #212529;
+}
 .text-gray {
     color: #63605d;
+}
+.font-weight-medium {
+    font-weight: 600;
 }
 .table-responsive {
     box-shadow: 0 2px 2px 0 rgba(0,0,0,.14), 0 1px 5px 0 rgba(0,0,0,.12), 0 3px 1px -2px rgba(0,0,0,.2);
