Changes for examples headings

--- a/raml2html/themes/default/index.html.twig
+++ b/raml2html/themes/default/index.html.twig
@@ -104,7 +104,10 @@
 <script src="web/js/bootstrap.bundle.min.js"></script>
 <script src="web/js/clipboard.min.js"></script>
 <script src="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.18.1/highlight.min.js"></script>
-<script>hljs.initHighlightingOnLoad();</script>
+<script>
+    $('[data-toggle="tooltip"]').tooltip();
+    hljs.initHighlightingOnLoad();
+</script>
 <script src="web/js/custom.js"></script>
 <script>
     // $(document).ready(function () {
