--- a/web/css/style.css
+++ b/web/css/style.css
@@ -21,7 +21,7 @@ body {
 ::-webkit-scrollbar-thumb:hover {
     background: #f15a22;
 }
-
+/*.background--gray*/
 .header {
     height: 3rem;
 }
@@ -211,6 +211,9 @@ code {
 }
 .background--gray {
     background-color: #fcfcfc;
+}
+.background--gray-light {
+    background-color: #eef1f3;
 }
 .badge--publish {
     background-color: #df5000;
